# SnartCut

./: .gitignore  Cargo.toml  README.md  printer_ports.csv  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml  rust.yml
PCAP/: job-analysis.txt  pcap2.json  send-job-vevor-smart.pcapng  smart-pcap.json  smart1-filtered.pcapng  test.txt
snartlaser/: __init__.py  __main__.py  app.py
snartlaser/canvas/: __init__.py  items.py  scene.py  tools.py  view.py
snartlaser/core/: __init__.py  config.py  event_bus.py  types.py
snartlaser/device/: __init__.py  base.py  grbl.py  vinyl.py
snartlaser/formats/: __init__.py  dxf.py  svg.py
snartlaser/gcode/: __init__.py  generator.py
snartlaser/job/: __init__.py  layer.py  settings.py
snartlaser/ui/: __init__.py  canvas_widget.py  device_panel.py  job_panel.py  layers_panel.py  mainwindow.py
snartlaser/ui/dialogs/: device_settings.py  material_library.py
src/: app.rs  main.rs
src/canvas/: items.rs  mod.rs  scene.rs  tools.rs
src/core/: config.rs  types.rs
src/device/: base.rs  grbl.rs  mod.rs  ruida.rs  vevor.rs  vevor_usb_protocol.rs  vinyl.rs
src/formats/: dxf.rs  mod.rs  svg.rs
src/gcode/: generator.rs
src/job/: layer.rs  mod.rs  settings.rs
src/ui/: canvas_widget.rs  device_panel.rs  job_panel.rs  layers_panel.rs  mod.rs  ruler.rs
src/ui/dialogs/: device_settings.rs  material_library.rs  mod.rs  preferences.rs
tests/: __init__.py  conftest.py  test_canvas.py  test_core.py  test_formats.py  test_gcode.py  test_job.py
