[package]
name = "snart-cut"
version = "0.1.2"
edition = "2021"
description = "Vinyl and laser design and cut program"
license = "GPL-3.0-only"

[[bin]]
name = "snartcut"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", features = ["canvas", "tokio", "advanced", "svg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serialport = "4"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
usvg = "0.44"
rfd = "0.15"
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
crc32fast = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Printing", "Win32_Graphics_Gdi", "Win32_Security", "Win32_Devices_DeviceAndDriverInstallation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
approx = "0.5"
