[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snartlaser"
version = "0.1.0"
description = "Open-source laser cutter / vinyl cutter design and control application"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["laser", "cutter", "engraver", "vinyl", "gcode", "grbl", "lightburn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
]
dependencies = [
    "PyQt6>=6.4",
    "ezdxf>=1.0",
    "lxml>=4.9",
    "numpy>=1.24",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
]

[project.scripts]
snartlaser = "snartlaser.__main__:main"

[project.gui-scripts]
snartlaser-gui = "snartlaser.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["snartlaser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
